--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -218,7 +218,11 @@
                     android:paddingEnd="8dp" />
             </RelativeLayout>
             <androidx.recyclerview.widget.RecyclerView
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="4dp"
+                android:overScrollMode="never"
                 android:id="@+id/rv_project_list"
+                tools:listitem="@layout/cell_project_not_uploaded"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </LinearLayout>
