--- a/app/src/main/res/drawable/upload_photo_bg.xml
+++ b/app/src/main/res/drawable/upload_photo_bg.xml
@@ -2,8 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <stroke android:width="1dp"
-        android:color="#8E8E8E"/>
-    <corners android:radius="4dp"/>
-
+    <solid android:color="#E1E1E1"/>
 </shape>
