--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -28,6 +28,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:text="DAS"
+                    android:layout_marginStart="16dp"
                     android:textColor="#FFFFFF"
                     android:textSize="16sp" />
 
@@ -47,190 +48,210 @@
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
-        android:id="@+id/swiperefreshlayout"
         android:layout_height="match_parent"
+        android:id="@+id/swiperefreshlayout"
         android:layout_below="@+id/appBarLayout">
 
-        <LinearLayout
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <RelativeLayout
-                android:id="@+id/rl_container"
+            android:layout_height="match_parent">
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="0dp">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <views.MonSemiBold
-                    android:id="@+id/tv_not_upload"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_toStartOf="@+id/upload_switch"
-                    android:text="Not Uploaded" />
-
-
-                <!-- Two states switch -->
-                <com.rm.rmswitch.RMSwitch
-                    android:id="@+id/upload_switch"
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                    app:checked="false"
-                    app:enabled="true"
-                    app:forceAspectRatio="false"
-                    app:switchBkgCheckedColor="@color/green"
-                    app:switchBkgNotCheckedColor="@color/red"
-                    app:switchDesign="android"
-                    app:switchToggleCheckedColor="@color/green"
-                    app:switchToggleCheckedImage="@drawable/ic_cam_upload"
-                    app:switchToggleNotCheckedColor="@color/red"
-                    app:switchToggleNotCheckedImage="@drawable/ic_cam_not_upload" />
-
-
-                <views.MonSemiBold
-                    android:id="@+id/tv_upload"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_toEndOf="@+id/upload_switch"
-                    android:text="Uploaded" />
-
-                <LinearLayout
-                    android:id="@+id/linearLayout"
+                <RelativeLayout
+                    android:id="@+id/rl_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/upload_switch"
-                    android:layout_marginTop="8dp"
-                    android:orientation="horizontal"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent">
+                    android:layout_marginEnd="0dp">
 
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="0dp"
+                    <views.MonSemiBold
+                        android:id="@+id/tv_not_upload"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_toStartOf="@+id/upload_switch"
+                        android:text="Not Uploaded" />
+
+
+                    <!-- Two states switch -->
+                    <com.rm.rmswitch.RMSwitch
+                        android:id="@+id/upload_switch"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="10dp"
+                        app:checked="false"
+                        app:enabled="true"
+                        app:forceAspectRatio="false"
+                        app:switchBkgCheckedColor="@color/green"
+                        app:switchBkgNotCheckedColor="@color/red"
+                        app:switchDesign="android"
+                        app:switchToggleCheckedColor="@color/green"
+                        app:switchToggleCheckedImage="@drawable/ic_cam_upload"
+                        app:switchToggleNotCheckedColor="@color/red"
+                        app:switchToggleNotCheckedImage="@drawable/ic_cam_not_upload" />
+
+
+                    <views.MonSemiBold
+                        android:id="@+id/tv_upload"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_toEndOf="@+id/upload_switch"
+                        android:text="Uploaded" />
+
+                    <LinearLayout
+                        android:id="@+id/linearLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/upload_switch"
+                        android:layout_marginTop="8dp"
+                        android:orientation="horizontal"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent">
+
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginEnd="4dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_weight="0.5">
+
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:padding="8dp">
+
+                                <views.MonRegular
+                                    android:id="@+id/tv_from_date_lbl"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="From Date"
+                                    android:textStyle="bold" />
+
+
+                                <views.MonRegular
+                                    android:id="@+id/tv_from_date"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_below="@+id/tv_from_date_lbl"
+                                    android:text="23 Aug 2020" />
+
+                                <ImageView
+                                    android:id="@+id/iv_from_calender"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_centerVertical="true"
+                                    android:src="@drawable/ic_calender" />
+
+
+                            </RelativeLayout>
+
+                        </androidx.cardview.widget.CardView>
+
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="4dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_weight="0.5">
+
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:padding="8dp">
+
+                                <views.MonRegular
+                                    android:id="@+id/tv_to_date_lbl"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="To Date"
+                                    android:textStyle="bold" />
+
+
+                                <views.MonRegular
+                                    android:id="@+id/tv_to_date"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_below="@+id/tv_to_date_lbl"
+                                    android:text="23 Aug 2020" />
+
+                                <ImageView
+                                    android:id="@+id/iv_to_calender"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_centerVertical="true"
+                                    android:src="@drawable/ic_calender" />
+
+
+                            </RelativeLayout>
+                        </androidx.cardview.widget.CardView>
+
+
+                    </LinearLayout>
+
+
+                    <AutoCompleteTextView
+                        android:id="@+id/et_search"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_below="@+id/linearLayout"
                         android:layout_marginStart="8dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginEnd="4dp"
-                        android:layout_marginBottom="8dp"
-                        android:layout_weight="0.5">
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:padding="8dp">
-
-                            <views.MonRegular
-                                android:id="@+id/tv_from_date_lbl"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="From Date"
-                                android:textStyle="bold" />
-
-
-                            <views.MonRegular
-                                android:id="@+id/tv_from_date"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/tv_from_date_lbl"
-                                android:text="23 Aug 2020" />
-
-                            <ImageView
-                                android:id="@+id/iv_from_calender"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentEnd="true"
-                                android:layout_centerVertical="true"
-                                android:src="@drawable/ic_calender" />
-
-
-                        </RelativeLayout>
-
-                    </androidx.cardview.widget.CardView>
-
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="2dp"
                         android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:layout_weight="0.5">
+                        android:layout_marginBottom="2dp"
+                        android:background="@drawable/search_bg"
+                        android:cursorVisible="true"
+                        android:drawableEnd="@drawable/ic_search_24"
+                        android:focusableInTouchMode="true"
+                        android:hint="@string/search"
+                        android:paddingStart="8dp"
+                        android:paddingEnd="8dp" />
+                </RelativeLayout>
 
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:padding="8dp">
-
-                            <views.MonRegular
-                                android:id="@+id/tv_to_date_lbl"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="To Date"
-                                android:textStyle="bold" />
-
-
-                            <views.MonRegular
-                                android:id="@+id/tv_to_date"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/tv_to_date_lbl"
-                                android:text="23 Aug 2020" />
-
-                            <ImageView
-                                android:id="@+id/iv_to_calender"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentEnd="true"
-                                android:layout_centerVertical="true"
-                                android:src="@drawable/ic_calender" />
-
-
-                        </RelativeLayout>
-                    </androidx.cardview.widget.CardView>
-
-
-                </LinearLayout>
-
-
-                <AutoCompleteTextView
-                    android:id="@+id/et_search"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:nestedScrollingEnabled="false"
+                    android:overScrollMode="never"
+                    android:id="@+id/rv_project_list"
+                    tools:listitem="@layout/cell_project_not_uploaded"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_below="@+id/linearLayout"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="2dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="2dp"
-                    android:background="@drawable/search_bg"
-                    android:cursorVisible="true"
-                    android:drawableEnd="@drawable/ic_search_24"
-                    android:focusableInTouchMode="true"
-                    android:hint="@string/search"
-                    android:paddingStart="8dp"
-                    android:paddingEnd="8dp" />
-            </RelativeLayout>
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_marginStart="4dp"
-                android:layout_marginEnd="4dp"
-                android:overScrollMode="never"
-                android:id="@+id/rv_project_list"
-                tools:listitem="@layout/cell_project_not_uploaded"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </LinearLayout>
-
-
+                    android:layout_height="match_parent" />
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:id="@+id/progressbar"/>
+
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:visibility="visible"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="2dp"
+        android:id="@+id/animation_view"
+        android:layout_centerInParent="true"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="loading.json"
+        app:lottie_loop="false" />
 
 
 </RelativeLayout>
