--- a/app/src/main/res/layout/activity_geo_tagging.xml
+++ b/app/src/main/res/layout/activity_geo_tagging.xml
@@ -112,9 +112,22 @@
     </RelativeLayout>
 
     <ProgressBar
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:id="@+id/progress"/>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:visibility="visible"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="2dp"
+        android:id="@+id/animation_view"
+        android:layout_centerInParent="true"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="location_pin_jumping.json"
+        app:lottie_loop="false" />
 
 </RelativeLayout>
