--- a/app/src/main/res/layout/cell_project_not_uploaded.xml
+++ b/app/src/main/res/layout/cell_project_not_uploaded.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
     android:layout_marginTop="4dp"
     android:layout_marginEnd="8dp"
@@ -52,9 +52,17 @@
             <views.MonSemiBold
                 android:textColor="@color/white"
                 android:id="@+id/tv_project_name"
-                android:layout_width="wrap_content"
+                android:text="Project name : "
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Project name : " />
+                android:singleLine="true"
+                android:ellipsize="marquee"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:scrollHorizontally="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:freezesText="true"
+                />
 
 
             <views.MonSemiBold
