--- a/app/src/main/res/layout/cell_project_not_uploaded.xml
+++ b/app/src/main/res/layout/cell_project_not_uploaded.xml
@@ -1,26 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginBottom="4dp"
-    app:cardBackgroundColor="#364F6B"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="4dp">
+    android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="4dp"
+        app:cardBackgroundColor="#364F6B"
+        app:cardCornerRadius="8dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
 
-        <androidx.cardview.widget.CardView
-            android:visibility="gone"
-            android:id="@+id/cv_map"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_map"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:visibility="gone"
             android:layout_centerVertical="true"
             android:layout_margin="8dp"
             app:cardCornerRadius="8dp">
@@ -103,6 +106,6 @@
 
         </ImageView>
 
-    </RelativeLayout>
-
-</androidx.cardview.widget.CardView>
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+</RelativeLayout>
