--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="colorPrimarylight">#008577</color>
     <color name="text_color">#585858</color>
     <color name="color_alpha">#3B000000</color>
+    <color name="quantum_grey300">#e0e0e0</color>
 </resources>
