--- a/app/src/main/res/layout/activity_image_upload.xml
+++ b/app/src/main/res/layout/activity_image_upload.xml
@@ -58,20 +58,28 @@
             android:layout_margin="10dp"
             android:orientation="vertical">
 
-            <RelativeLayout
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:background="@drawable/upload_photo_bg">
 
                 <ImageView
                     android:id="@+id/iv_upload"
-                    android:layout_width="200dp"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
                     android:layout_height="200dp"
-                    android:layout_centerInParent="true"
+                    android:src="@drawable/ic_upload" />
+
+                <ImageView
+                    android:id="@+id/iv_upload_2"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:layout_height="200dp"
                     android:src="@drawable/ic_upload" />
 
 
-            </RelativeLayout>
+            </LinearLayout>
 
 
             <views.MonBold
